--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,4 +42,8 @@ jobs:
       env:
         PASSWORD: ${{secrets.PASSWORD}}
       run: |
-        pytest
+        pytest --alluredir=allure-report
+
+
+    - name: Allure report
+      uses: afiore/action-allure-report@v0.1.0
