--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -72,9 +72,9 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: allure-history
+        destination_dir: report
 
 
 
