--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -72,6 +72,7 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v3
       with:
+        github_token: ${{ github.token }}
         publish_branch: gh-pages
         publish_dir: allure-history
         destination_dir: report
