--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,17 +31,14 @@ jobs:
         pip install allure-pytest
         python -m pip install playwright
 
-    - name: Allure Report with history
-      uses: simple-elf/allure-report-action@v1.6
-
     - name: Ensure Playwright browsers are installed
       run: python -m playwright install chromium
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#    - name: Lint with flake8
+#      run: |
+#        # stop the build if there are Python syntax errors or undefined names
+#        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Prepare Allure history
       run: |
@@ -51,7 +48,7 @@ jobs:
       env:
         PASSWORD: ${{secrets.PASSWORD}}
       run: |
-        pytest --alluredir=../allure-results
+        python -m pytest -v --alluredir=../allure-results
 
     - name: Get Allure history
       uses: actions/checkout@v2
