--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,9 +44,8 @@ jobs:
       run: |
         cd ..
         mkdir -p allure-results
+
     - name: Test with pytest
-      env:
-        PASSWORD: ${{secrets.PASSWORD}}
       run: |
         python -m pytest -v --alluredir=../allure-results
 
@@ -63,6 +62,7 @@ jobs:
       if: always()
       with:
         allure_results: allure-results
+        allure_report: allure-report
         allure_history: allure-history
         keep_reports: 5
 
